# zerollm

./: .gitignore  AGENTS.md  CLI_ONBOARDING.md  DESIGN.md  Makefile  PLAN.md  README.md  TODO.md  WIP.md  models.json  pyproject.toml  template.yaml
.github/: CODEOWNERS
.github/workflows/: aws-smoke.yml  ci.yml
ami/: imagebuilder-template.yaml  imagebuilder.sh
control_plane/backends/aws/: compute.py  handlers.py  state.py  streaming_router.js
control_plane/backends/mock/: compute.py  state.py
control_plane/core/: cluster.py  interfaces.py  keys.py  orchestrator.py  router.py
control_plane/shared/: config.py
docs/: aws-deploy-role.md
infrastructure/: README.md  deploy.sh
infrastructure/environments/dev/: backend.tf  main.tf  outputs.tf
infrastructure/modules/cicd/: main.tf  outputs.tf  variables.tf
scripts/: aws_smoke_request.py  cluster-status.sh  create_api_key.py  deploy.sh  instance-logs.sh  seed_models.py
tests/e2e/: conftest.py  mock_vllm.py  test_full_lifecycle.py  test_localstack_handlers.py
tests/unit/: test_ami_template.py  test_auth.py  test_aws_cleanup_handler.py  test_aws_compute.py  test_aws_smoke_request.py  test_cluster.py  test_cluster_handler.py  test_handlers_serialization.py  test_keys.py  test_mock_backends.py  test_orchestrator.py  test_router.py  test_seed_models.py
