[project]
name = "zerollm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "testcontainers[localstack]>=4.0",
]
upload = [
    "huggingface-hub>=0.23",
]

[tool.setuptools.packages.find]
include = ["control_plane*"]
